<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">云寻校</string>
    <string name="main_tab_txt1">首页</string>
    <string name="main_tab_txt2">视频</string>
    <string name="main_tab_txt3">高考志愿</string>
    <string name="main_tab_txt4">资料</string>
    <string name="main_tab_txt5">我的</string>
    <string name="school_query">高校查询</string>
    <string name="score_query">专业目录</string>
    <string name="school_choice">招生计划</string>
    <string name="school_rank">自主招生</string>
    <string name="rick_evaluate">VIP系统</string>
    <string name="wish_define_report">志愿报告</string>
    <string name="wisdom_choose_school">智能海选</string>
    <string name="same_score_direction">同分去向</string>
    <string name="test_evaluate">测试评估</string>
    <string name="career_test">MBTI职业测试</string>
    <string name="fit_profession">霍兰德测试</string>
    <string name="luqu_risk_evaluate">录取风险评估</string>
    <string name="wish_improve">志愿提升</string>
    <string name="gaokao_ti_ku">高考题库</string>
    <string name="daxue_on_live">大学直播</string>
    <string name="zhao_sheng_breif">权威解答</string>
    <string name="user_score">高考分数</string>
    <string name="score_rank">成绩排名</string>
    <string name="wen_li">文科／理科</string>
    <string name="wish_school">意向高校</string>
    <string name="wish_province">意向省份</string>
    <string name="heart_test">心理测试</string>
    <string name="user_wish">我的志愿</string>
    <string name="user_vip_service">VIP服务</string>
    <string name="user_help_center">帮助中心(QA)</string>
    <string name="user_contact_client_service">联系客服</string>
    <string name="user_about_us">关于我们</string>
    <string name="all_ke_mu">全部</string>
    <string name="yu_wen">语文</string>
    <string name="shu_xue">数学</string>
    <string name="english">英语</string>
    <string name="wen_zong">文综</string>
    <string name="li_zong">理综</string>
    <string name="wu_li">物理</string>
    <string name="hua_xue">化学</string>
    <string name="sheng_wu">生物</string>
    <string name="li_shi">历史</string>
    <string name="zheng_zhi">政治</string>
    <string name="di_li">地理</string>
    <string name="video_brief">简介</string>
    <string name="lu_year">年份</string>
    <string name="lu_type">文理科</string>
    <string name="lu_hightest">最高分</string>
    <string name="lu_lowest">最低分</string>
    <string name="lu_province_control">省控线</string>
    <string name="zy_name">专业名</string>
    <string name="pi_ci">地区</string>
    <string name="zs_number">招生人数</string>
    <string name="mbti_desc">性格外向/内向适合做什么？那些职业适合我的性格？性格是影响人一生的重要因素，性格不同，看待问题、处理事情的方式不同。通过本次测试，将让你发现真实的自己。</string>
    <string name="mbti_desc_1">MBTI的全名是Myers-Briggs Type Indicator。它是一种迫选型、自我报告式的性格评估理论模型，用以衡量和描述人们在获取信息、作出决策、对待生活等方面的心理活动规律和性格类型。</string>
    <string name="mbti_qw">以为MBTI职业模型为基础，通过专业的心理测试，让您清楚的了解自身职业倾向类型</string>
    <string name="mbti_qx">根据您的性格特点，为您推荐专业，你适合什么，看看结果就知道了。</string>
    <string name="mbti_sy">性格报告准确定义性格特征，并且分析行为特点，为您推荐适合的专业</string>
    <string name="interest_1">你知道你的兴趣是什么，适合干什么吗？</string>
    <string name="interest_2">一个人的职业兴趣倾向，决定了他最适合的职业，一个人如果干的是自己兴趣相符的工作，往往会将自己的潜力大大的激发，做出更高的成绩。在选择长期、稳定的职业时，不仅需要知道有能力做什么，更重要的是需要知道自己想做什么。</string>
    <string name="interest_3">霍兰德兴趣测试介绍</string>
    <string name="interest_4">霍兰德职业兴趣自测(Self-Directed Search)是由美国职业指导专家霍兰德(John Holland)根据他本人大量的职业咨询经验及其职业类型理论编制的测评工具。霍兰德把人的性格分成6个维度，每个人的性格都是这六个维度的不同程度组合。</string>
    <string name="interest_ys">有创造力，乐于创造新颖、与众不同的成果，渴望表现自己的个性，实现自身的价值。做事理想化，追求完美，不重实际。</string>
    <string name="interest_ct">尊重权威和规章制度，喜欢按计划办事，细心、有条理，习惯接受他人的指挥和领导，自己不谋求领导职务。</string>
    <string name="interest_yy">追求权力、权威和物质财富，具有领导才能。喜欢竞争、敢冒风险、有野心、抱负。</string>
    <string name="interest_yj">思想家而非实干家,抽象思维能力强，求知欲强，肯动脑，善思考，不愿动手。喜欢独立的和富有创造性的工作。</string>
    <string name="interest_xs">愿意使用工具从事操作性工作，动手能力强，做事手脚灵活，动作协调。偏好于具体任务，不善言辞，做事保守，较为谦虚。</string>
    <string name="interest_sh">喜欢与人交往、不断结交新的朋友、善言谈、愿意教导别人。关心社会问题、渴望发挥自己的社会作用。</string>
    <string name="detail_text">在2017国际体验设计大会中，来自“互联网银行用户体验联合实验室”的Ray和Louie在工作坊里为大家介绍了互联网金融的通用设计流程。后续我们把在工作坊里面提到设计方法库进行了再次整理和优化，在这里为大家详细的介绍。</string>
    <string name="app_tip">提示</string>
    <string name="a_type">A\n艺术型</string>
    <string name="c_type">C\n传统型</string>
    <string name="s_type">S\n社会型</string>
    <string name="r_type">R\n现实型</string>
    <string name="e_type">E\n企业型</string>
    <string name="i_type">I\n研究型</string>
    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false" tools:ignore="StringFormatInvalid">微信支付结果：%s</string>
    <!--用户协议-->
    <string name="agreement_title">云寻校会员协议</string>
    <string name="agreement_short_desc">本协议由您与云寻校共同缔结，本协议具有合同效力。本协议中协议双方合称协议相关方。\n\n本协议内容包括协议正文及所有云寻校已经发布的或将来发布的各类规格。所有规格与本协议都具有相同的法律效力。您应当在使用云寻校的服务前，认真阅读全部协议内容（未成年人需要在法定监护人陪同下阅读），如对协议有任何疑问，应向云寻校咨询。\n \n
无论您是否认真阅读了本协议，只要您同意进行了注册，则本协议就对您产生约束。届时您不得以未阅读本协议或未进行咨询为由，要求撤销本协议。\n \n如果您不同本协议的约定，请立即停止注册或停止使用云寻校的服务。云寻校会根据相关需要不时的修改本协议或者各类规格，并以云寻校产品内公示的方式进行通知，不再单独通知，变更后的协议和规则一经产品内公示，立即生效，如果您不同意相关变更，应当立即停止使用云寻校的服务，如果您继续使用云寻校的服务，即表示您接受修改的协议。
    </string>

    <string name="agreement_rule_1">一、会员使用规则</string>
    <string name="agreement_rule_1_content">1、会员充分了解并同意云寻校仅作为会员提供信息获取和分享的平台，会员必须为自己在云寻校内一切的操作行为负责，包括会员所传送的任何内容以及由此产生的任何结果。\n
2、云寻校保留因业务发展需要，单方面对全部或部分服务内容在任何时候、不经任何通知的情况下变更、暂停、限制、终止或撤销云寻校服务的权利，会员需承担此风险。\n
3、云寻校提供的服务中可能包括广告，会员同意在使用过程中显示云寻校和第三方供应商、合作伙伴提供的广告。\n
4、产品中云寻校的原创内容，版权完全归云寻校团队所有，会员不得拷贝他用，不得上传到其它网络平台。云寻校保留对此种非法行为进行追究的权利。\n
5、会员不得利用云寻校进行违反国家法律法规、侵犯他人权益的行为。云寻校可依其合理判断，对违反有关法律法规或本协议约定的会员进行处理，并且依据法律法规保存有关信息并向有关部门报告。\n
6、会员权利及义务:\n
(1)云寻校账号的所有权归云寻校所有，会员完成申请注册手续后，获得云寻校账号的使用权，云寻校因经营需要，有权回收会员的账号。\n
(2)会员有权更改、删除在云寻校上的个人资料、注册信息及传送内容等，但需注意，删除有关信息的同时也会删除任何您储存在系统中的文字和图片。会员需承担该风险。\n
(3)会员有责任妥善保管注册账号信息及账号密码的安全，会员需要对注册账号以及密码下的行为承担法律责任。\n
(4)会员注册云寻校账号后如果长期不登录该账号，云寻校团队有权回收该账号，以免造成资源浪费，由此带来问题均由会员自行承担。
</string>
    <string name="agreement_rule_2">二、会员隐私保护条款</string>
    <string name="agreement_rule_2_content">1、会员在注册账号或使用本服务的过程中，可能需要填写或提交一些必要的信息，如法律法规、规章规范性文件(以下称“法律法规”)规定的需要填写的身份信息。如会员提交的信息不完整或不符合法律法规的规定，则会员可能无法使用本服务或在使用本服务的过程中受到限制。\n
2、个人隐私信息是指涉及会员个人身份或个人隐私的信息，比如，会员真实姓名、身份证号、手机号码、手机设备识别码、lP地址、会员聊天记录。非个人隐私信息是指会员对本服务的操作状态以及使用习惯等明确且客观反映在云寻校服务器端的基本记录信息、个人隐私信息范围外的其它普通信息，以及会员同意公开的上述隐私信息。\n
3、尊重会员个人隐私信息的私有性是云寻校团队的一贯制度，云寻校团队将采取技术措施和其他必要措施，确保会员个人隐私信息安全，防止在本服务中收集的会员个人隐私信息泄露、毁损或丢失。在发生前述情形形或者云寻校团队发现存在发生前述情形的可能时，将及时采取补救措施。\n
4、云寻校团队未经会员同意不向任何第三方公开、透露会员个人隐私信息。但以下特定情形除外: \n (1)云寻校团队根据法律法规规定或有权机关的指示提供会员的个人隐私信息; \n (2)由于会员将其会员密码告知他人或与他人共享注册帐户与密码，由此导致的任何个人信息的泄漏，或其他非因云寻校团队原因导致的个人隐私信息的泄露; \n (3)会员自行向第三方公开其个人隐私信息; \n (4)会员与云寻校及合作单位之间就会员个人隐私信息的使用公开达成约定，云寻校因此向合作单位公开会员个人隐私信息; \n (5)任何由于黑客攻击、电脑病毒侵入及其他不可抗力事件导致会员个人隐私信息的泄露。\n
5、会员同意云寻校可在以下事项中使用会员的个人隐私信息:\n
(1)云寻校向会员及时发送重要通知，如软件更新、本协议条款的变更;\n
(2)云寻校内部进行审计、数据分析和研究等，以改进云寻校的产品、服务和与会员之间的沟通;\n
(3)依本协议约定，云寻校管理、审查会员信息及进行处理措施;\n
(4)适用法律法规规定的其他事项。除上述事项外，如未取得会员事先同意，云寻校不会将会员个人隐私信息使用干任何其他用途。\n
6、为了改善云寻校的技术和服务，向会员提供更好的服务体验，云寻校或可会自行收集使用或向第三方提供会员的非个人隐私信息。云寻校会不时更新本隐私权保护声明。我们会在网页上发布对隐私权声明所做的变更内容。当您接受本协议条款时，您同样认可并接受云寻校隐私政策的条款。云寻校十分重视未成年人的隐私保护，若您是18周岁以下的未成年人，在使用云寻校的服务前，应事先取得您家长或法定监护人的书面同意。超级志愿根据国家相关法律法规的规定保护未成年人的个人信息。
</string>
    <string name="agreement_rule_3">三、云寻校商标信息</string>
    <string name="agreement_rule_3_content">云寻校服务中所涉及的logo图形、文字或其组成，及产品、服务名称，均为云寻校之商标(以下简称“云寻校标识”)。未经云寻校事先书面同意，会员不得将云寻校标识以任何方式展示或使用或作其他处理，也不得向他人表明您有权展示、使用、或其他有权处理云寻校标识的行为。</string>
    <string name="agreement_rule_4">四、法律责任及免责</string>
    <string name="agreement_rule_4_content">1、本《协议》遵循中华人民共和国相关的法律法规，与中华人民共和国法律解释相一致。会员和服务方一致同意服从各级法院管辖。如本《协议》中某些条款与中华人民共和国现行法律法规相抵触时，这些条款将完全按照现行法律规定重新解释，但不影响其它条款的有效性和本《协议》的整体效力。\n
2、会员违反本《协议》或相关的服务条款的规定，导致或产生的任何第三方主张的任何索赔、要求或损失，包括合理的律师费，会员同意赔偿云寻校团队，使之免受损害。\n
3、会员因第三方如电信部门的通讯线路故障、技术问题、网络、电脑故障、系统不稳定性及其他各种不可杭力原因而遭受的一切损失，云寻校团队及合作单位不承担责任。\n
4、因技术故障等不可抗事件影响到服务的正常运行的，云寻校团队承诺在第一时间内与相关单位配合，及时处理进行修复，但会员因此而遭受的一切损失，云寻校团队不承担责任。\n
5、云寻校定义的信息内容包括:原创视频、文字、相片、图表;云寻校为会员提供的商业信息，所有这些内容受版权和其它知识产权和所有权法律的保护。所以，会员只能在云寻校团队授权下才能使用这些内容，而不能擅自复制、修改、编纂这些内容、或创造与内容有关的衍生产品。
    </string>
    <string name="agreement_rule_5">五、其他条款</string>
    <string name="agreement_rule_5_content">1、所有发给会员的通告都可通过相关页面的公告或电子邮件或常规的信件等传送。服务条款的修改、服务变更、或其它重要事件的通告都会以此形式进行。\n
2、如有任何关于我们的会员协议投诉及疑问，请联系我们：admin@yunxunxiao.com
    </string>

    <string name="test_desc">时间的时代老师的老实交代老实交代三叠浪卷三的申领单数据登陆上电力建设绝对是了登陆上登陆上
    老司机登陆上领导说的了刷机大师电路设计登陆上电力建设鲁大师都是登陆上登陆上登陆上登陆上登陆上多少度历史德累斯顿历史德累斯顿ls
    三六九等历史就的了收到了数据的老实交代老师的老实交代老实交代老师的老司机登陆上多少度老实交代老实交代老师的老师的就收到了老实交代老实交代
    上来大家说的老司机劳动竞赛历史倒计时地脚螺栓电力建设电力建设电力建设电力建设电力建设登陆上多少度累计收到累计收到的声嘶力竭的历史的三叠浪卷三的</string>
    <string name="copy_right">Copyright © 2017-2018 云寻校版权所有</string>
    <string name="vip_gold_protocol">\t\t\t本协议是您与贵州普学教育信息咨询有限公司（云寻校）（网址：www.yunxunxiao.com）所有者（以下简称为"云寻校"）之间就云寻校金卡报志愿服务所订立的契约，请您仔细阅读本注册协议，您点击"同意并继续"按钮后，本协议即构成对双方有约束力的法律文件。</string>
    <string name="vip_gold_protocol_item_1">第1条\t\t自缴费之日起，既视为金卡志愿服务（以下简称“服务”）正式开始，直至考生本人当年填报志愿事项结束，金卡服务自动终止。\n
第2条\t\t该服务内容仅包括云寻校网站以及APP应用页面上规范的金卡服务项目.项目内容包括：\n
\t\t1. 精准预测大学录取概率\n
\t\t2. 精准预测专业录取概率\n
\t\t3. 精准的推荐大学和专业\n
\t\t4. 精准设计最佳报考方案\n
\t\t5.人工智能审核志愿方案 1 次\n
\t\t6.免费心理测试和大学录取风险测试\n
\t\t7.资深专家验定最终方案\n
\t\t8.未被录取2倍赔付
</string>
    <string name="vip_gold_protocol_item_2">第3条\t\t您支付成功后，应尽快如实填写考生信息，以便平台精准计算概率和设计方案。\n
第4条\t\t在您提交考生信息后，您有权利享有平台通过考生分数排位 兴趣、意向，心理测试等内容为学生预测专业录取概率推荐大学以及专业等服务。您有权利根据您提供的信息，享有平台智能性分析，为考生制定一份志愿预案。
第6条\t\t云寻校不得外泄考生的相关信息。\n
第7条\t\t高考成绩公布后，将有专家+平台双审核为您确定最终的志愿填报方案，您可在云寻校APP个人中心查看志愿方案。并可对服务进行评价。\n
第8条\t\t在购买银卡服务后有义务在平台填写考生真实有效信息如考生的分数以及考生的排位就读中学等重要信息，否则出现志愿填报方案，大学概率预测不精准，平台不承担任何责任，均有客户自身承担。\n
第9条\t\t平台应为考生选择院校专业提供合理化建议并出具填报方案。考生及家长拥有最终决定权。如未按照专家提供方案进行填报，云寻校和专家不对最终志愿结果承担责任。若由专家修改后志愿填报方案考生未被录取，我公司愿依服务金额的2倍作为赔偿保障给予考生。（考生虚按照专家提供的方案进行填报）。\n
第10条\t\t平台所有的查询信息数据只为考生填报志愿提供科学数据支撑，您不得随意采集，爬取。如后台发现有权利对您的账号进行封号，注销。并保留对您通过法律途径追究经济损失。
</string>
    <string name="vip_gold_protocol_item_3">第11条\t\t用户与云寻校双方确认已完全明了上述条款，自愿承担各自的义务与责任。\n
第12条\t\t点击订单支付页面的"同意"按钮即视为您完全接受本协议，在点击之前请您再次确认已知悉并完全理解本协议的全部内容。
</string>
    <string name="vip_gold_protocol_item_4">贵州普学教育信息咨询有限公司\n2018年2月6日\t\t\t\t\t</string>

    <string name="vip_silver_protocol_item_1">第1条\t\t自缴费之日起，既视为金卡志愿服务（以下简称“服务”）正式开始，直至考生本人当年填报志愿事项结束，金卡服务自动终止。\n
第2条\t\t该服务内容仅包括云寻校网站以及APP应用页面上规范的金卡服务项目.项目内容包括：\n
\t\t1. 精准预测大学录取概率\n
\t\t2. 精准预测专业录取概率\n
\t\t3. 精准的推荐大学和专业\n
\t\t4. 精准设计最佳报考方案\n
\t\t5.人工智能审核志愿方案 1 次\n
\t\t6.免费心理测试和大学录取风险测试
</string>

    <string name="vip_diamond_protocol_item_2">第3条\t\t您支付成功后，应尽快如实填写考生信息，以便咨询师尽快了解情况。\n
第4条\t\t您购买的专家一对一服务，在您提交考生信息后，客服将在次日通过电话与您沟通帮您预约专家服务。请保持手机畅通。\n
第5条\t\t高考成绩公布后，您应将高考成绩即时录入到云寻校系统中并及时电话通知专家，系统会根据考生实际成绩，进行方案的初步设计。\n
第6条\t\t专家一对一时将根据您提供的信息，结合考生综合素质、心理测评、以及院校招生要求，院校专业、历年分值数据，分数排位，未来职业发展优势等条件并结合考生需求当面向考生推荐最终合适的院校申请方案。\n
第8条\t\t服务完成后，您可在云寻校APP个人中心查看志愿方案。并可对服务进行评价。
</string>
    <string name="vip_diamond_protocol_item_3">第9条\t\t如果在本协议第4条正式服务开始前，您申请终止服务，云寻校将收取服务费全额退换给您，如果在第五条进行时且未出方案您终止服务云寻校服务，将收取服务费的10%作为服务违约金。剩余服务费退换给您，办理退费方式：您致电云寻校客服，客服人员将为您办理。\n
第10条\t\t请您应积极配合专家提供咨询服务，且提供的信息资料真实有效，若您严重不配合，提供信息资料有误，因您的原因使专家提供的服务不存在实际意义时，云寻校和专家不承担任何责任且不退还服务费用。\n
第11条\t\t云寻校不得外泄考生的相关信息。\n
第12条\t\t专家应为考生选择院校专业提供合理化建议并出具填报方案。考生高考志愿填报最终由考生和家长自主完成，考生及家长拥有最终决定权。如未按照专家提供方案进行填报，云寻校和专家不对最终志愿结果承担责任。\n
第13条\t\t考生在使用云寻校专家提供的志愿填报方案，未被录取，云寻校将赔付考生2万元未录取意外保险
</string>
    <string name="vip_diamond_protocol_item_4">第14条\t\t用户与云寻校双方确认已完全明了上述条款，自愿承担各自的义务与责任。\n
第15条\t\t点击订单支付页面的"同意"按钮即视为您完全接受本协议，在点击之前请您再次确认已知悉并完全理解本协议的全部内容。
</string>
</resources>